[package]
name = "tarnet-expose"
version = "0.1.0"
edition = "2021"

[lib]
name = "tarnet_expose"
path = "src/lib.rs"

[dependencies]
tarnet-api = { path = "../tarnet-api" }
tokio = { version = "1", features = ["full"] }
toml = "0.8"
serde = { version = "1", features = ["derive"] }
log = "0.4"

[dev-dependencies]
async-trait = "0.1"
