[package]
name = "tarnet-topsim"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "tarnet-topsim"
path = "src/main.rs"

[dependencies]
tarnet = { path = "../..", default-features = false }
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
log = "0.4"
env_logger = "0.11"
rand = "0.8"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
